--- a/app/src/main/res/layout/activity_set_new_task.xml
+++ b/app/src/main/res/layout/activity_set_new_task.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="50dp"
+    android:gravity="center"
+    android:background="@color/colorButton"
+    >
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="20dp"
+    android:background="@drawable/layout_border_radious"
+    android:padding="30dp"
+    android:elevation="4dp"
     android:orientation="vertical"
     tools:context=".activities.SetNewTaskActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/nueva_tarea_txt"
+        android:textColor="@color/colorButton"
+        android:textSize="18sp"/>
 
     <EditText
         android:id="@+id/titleNewTask"
@@ -45,5 +63,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dateNewTask" />
+
+</LinearLayout>
 
 </LinearLayout>
