--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_margin="15dp"
+        android:layout_margin="5dp"
         android:baselineAligned="false"
         android:gravity="center"
         android:orientation="horizontal"
@@ -17,18 +17,17 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="100"
+            android:layout_weight="50000"
             android:gravity="start"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_task"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
-                android:minHeight="48dp"
                 android:text="Title"
-                android:gravity="center"
+                android:gravity="start"
                 android:textColor="@color/colorText"
                 android:textSize="16sp" />
 
@@ -37,8 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
-                android:minHeight="48dp"
-                android:gravity="center"
+                android:gravity="start"
                 android:text="Date"
                 android:textColor="@color/colorText"
                 android:textSize="16sp" />
