--- a/app/src/main/res/layout/activity_set_new_task.xml
+++ b/app/src/main/res/layout/activity_set_new_task.xml
@@ -45,12 +45,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="Fecha"
-        android:inputType="date"
+        android:inputType="none"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleNewTask"
-        app:layout_constraintWidth_default="wrap" />
+        app:layout_constraintWidth_default="wrap"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/add_task_button"
