--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,9 +25,9 @@
                 android:id="@+id/txt_task"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="start"
                 android:minWidth="48dp"
                 android:text="Title"
-                android:gravity="start"
                 android:textColor="@color/colorText"
                 android:textSize="16sp" />
 
@@ -35,8 +35,8 @@
                 android:id="@+id/txt_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="48dp"
                 android:gravity="start"
+                android:minWidth="48dp"
                 android:text="Date"
                 android:textColor="@color/colorText"
                 android:textSize="16sp" />
@@ -62,8 +62,8 @@
             <CheckBox
                 android:id="@+id/checkboxTask"
                 android:layout_width="48dp"
-                android:layout_marginLeft="20dp"
-                android:layout_height="48dp" />
+                android:layout_height="48dp"
+                android:layout_marginLeft="20dp" />
 
         </LinearLayout>
 
@@ -72,6 +72,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorButton"/>
+        android:background="@color/colorButton" />
 
 </LinearLayout>
