--- a/app/src/main/res/values/options.xml
+++ b/app/src/main/res/values/options.xml
@@ -1,3 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="options_array">
+
+        <item>Personal</item>
+        <item>Profesional</item>
+
+    </string-array>
 </resources>
