--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_margin="5dp"
+        android:elevation="4dp"
+        android:background="@drawable/rounded_card"
+        android:layout_width="240dp"
+        android:layout_height="160dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="10dp"
         android:baselineAligned="false"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:gravity="center"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="50000"
+            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
             android:gravity="start"
             android:orientation="vertical">
 
@@ -28,7 +35,7 @@
                 android:gravity="start"
                 android:minWidth="48dp"
                 android:text="Title"
-                android:textColor="@color/colorText"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
 
             <TextView
@@ -38,40 +45,45 @@
                 android:gravity="start"
                 android:minWidth="48dp"
                 android:text="Date"
-                android:textColor="@color/colorText"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/btn_box"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:gravity="end"
-            android:orientation="horizontal">
+            android:layout_margin="10dp"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_delete"
-                android:layout_width="100dp"
-                android:layout_height="48dp"
-                android:layout_marginLeft="50dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="4dp"
                 android:background="@drawable/rounded_button"
-                android:text="Delete"
-                android:textColor="@color/white" />
+                android:drawableLeft="@drawable/ic_delete"
+                android:paddingLeft="8dp"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="@id/btn_box"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/btn_box"
+                app:layout_constraintVertical_bias="0.0"
+                tools:ignore="SpeakableTextPresentCheck" />
 
             <CheckBox
                 android:id="@+id/checkboxTask"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:layout_marginLeft="20dp" />
+                app:layout_constraintEnd_toEndOf="@+id/btn_box"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorButton" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
