--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,15 +39,15 @@
                 android:textStyle="bold" />
 
             <ScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="200dp">
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@drawable/rounded_button">
 
                 <TextView
                     android:id="@+id/textChatGptResponse"
-                    android:layout_width="380dp"
-                    android:layout_height="200dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:background="@drawable/rounded_button"
                     android:elevation="4dp"
                     android:padding="10dp"
                     android:text=""
@@ -64,17 +64,14 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="none">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerID"
                     android:layout_width="wrap_content"
                     android:layout_height="200dp"
-                    android:orientation="horizontal" />
-            </HorizontalScrollView>
+                    android:orientation="horizontal"
+                    android:scrollbars="none"/>
+
 
         </LinearLayout>
 
