--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/box_clic_Show"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
+
 
     <LinearLayout
         android:elevation="4dp"
@@ -20,6 +24,9 @@
         android:gravity="center"
         android:orientation="vertical">
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"></LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:minWidth="48dp"
-                android:text="Title"
+                android:text="Titulo"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
@@ -44,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:minWidth="48dp"
-                android:text="Date"
+                android:text="Fecha"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
